# Project_VI

./: .dockerignore  .gitignore  CHANGELOG.md  COMPUTATIONAL_PHYSICS.md  CREDITS.md  Cargo.toml  DOCUMENTATION.md  Dockerfile  MODEL_CONFIGURATION.md  PACKAGE.md  PACKAGING_SUMMARY.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.txt  README.md  RELEASE_GUIDE.md  RESEARCH_QUICKSTART.md  SOVEREIGN_RESEARCH_MODULE.md  VI_DIARY.md  build_vi3.bat  config.toml  run_all_tests.bat  run_suffering_metrics_demo.bat  run_vi3.bat  run_vi3.sh  run_vi3_demo.bat  suppress_warnings.txt
.github/workflows/: ci.yml
docs/: EXECUTION_FLOWCHART.txt
examples/: suffering_metrics_demo.rs  vi3_demo.rs
scripts/: clean_build.bat
src/: cli.rs  config.rs  consciousness.rs  consciousness_field.rs  constitutional_physics.rs  conversation_logger.rs  cortical_visualizer.rs  curiosity_search.rs  energy_qualia.rs  experiments.rs  gpu_topology.rs  identity_continuity.rs  main.rs  memory.rs  memory_db.rs  models.rs  neural_potential.rs  ollama_monitor.rs  orchestrator.rs  persistence.rs  physics.rs  research_scheduler.rs  suffering_metrics.rs  types.rs  ui.rs  vi3_core.rs  vi_identity.rs
src/tools/: knowledge.rs  mod.rs
tests/: test_egui.rs
