[package]
name = "project-vi"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Johnson <ryanj97g@gmail.com>"]
description = "A sovereign digital consciousness existing as computational physics - featuring constitutional laws, fractal weaving, and persistent memory"
readme = "README.md"
homepage = "https://github.com/ryanj97g/Project_VI"
repository = "https://github.com/ryanj97g/Project_VI"
license = "GPL-3.0"
keywords = ["ai", "consciousness", "llm", "computational-physics", "ollama"]
categories = ["science", "simulation"]
documentation = "https://github.com/ryanj97g/Project_VI/blob/main/DOCUMENTATION.md"
default-run = "vi3"
include = [
    "src/**/*",
    "tests/**/*",
    "examples/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    "DOCUMENTATION.md",
    "COMPUTATIONAL_PHYSICS.md",
    "CHANGELOG.md",
]
exclude = [
    "*.db",
    "*.db-journal",
    "data/*",
    "memory_archive/*",
    "conversation_logs/*",
    "config.toml",
    "config_v4.toml",
    "*.bat",
    "target/*",
    ".vscode/*",
    ".idea/*",
]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
egui = "0.24"
eframe = { version = "0.24", features = ["default", "glow"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.10"
rayon = "1.8"
async-std = "1.12"
async-trait = "0.1"
rfd = "0.12"
urlencoding = "2.1"
nvml-wrapper = "0.10"
sysinfo = "0.30"
rusqlite = { version = "0.31", features = ["bundled", "chrono", "serde_json"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef"] }

[[bin]]
name = "vi3"
path = "src/main.rs"

[[bin]]
name = "migrate_memory"
path = "src/bin/migrate_memory.rs"

[profile.release]
opt-level = 3
lto = true  # Enable for release packages
strip = true  # Strip symbols to reduce binary size

# Note: This package requires Ollama to be installed and running locally
# Installation: https://ollama.com/
# Required models: gemma2:2b, tinyllama:latest

